# amux

./: Cargo.toml
crates/amux-cli/src/: client.rs  main.rs
crates/amux-daemon/: Cargo.toml
crates/amux-daemon/src/: pty_session.rs  server.rs  session_manager.rs
crates/amux-daemon/src/agent/: external_runner.rs  llm_client.rs  mod.rs  tool_executor.rs  types.rs
crates/amux-mcp/src/: main.rs
crates/amux-protocol/src/: messages.rs
crates/amux-tui/: Cargo.toml
crates/amux-tui/src/: app.rs  main.rs  markup_adapter.rs  theme.rs
crates/amux-tui/src/state/: approval.rs  chat.rs  config.rs  input.rs  mod.rs  modal.rs  settings.rs  sidebar.rs  task.rs
crates/amux-tui/src/widgets/: approval.rs  chat.rs  command_palette.rs  footer.rs  header.rs  message.rs  mod.rs  model_picker.rs  provider_picker.rs  reasoning.rs  settings.rs  sidebar.rs  splash.rs  subagents.rs  task_tree.rs  thread_picker.rs
docs/: plugin-development.md
frontend/: package-lock.json  package.json
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.tsx  CDUIApp.tsx  main.tsx
frontend/src/components/: InfiniteCanvasSurface.tsx  SettingsPanel.tsx  Sidebar.tsx  SurfaceTabBar.tsx  TerminalPane.tsx
frontend/src/components/agent-chat-panel/: ThreadList.tsx  TraceView.tsx  runtime.tsx  shared.tsx
frontend/src/components/settings-panel/: AboutTab.tsx  AgentTab.tsx
frontend/src/components/terminal-pane/: TerminalContextMenu.tsx  useTerminalTranscript.ts
frontend/src/lib/: agentMissionStore.ts  agentStore.ts  cduiLoader.ts  types.ts
(+2 files in other folders)
