[package]
name = "tamux-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tamux-tui"
path = "src/main.rs"

[dependencies]
amux-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }

# TUI dependencies
ftui-runtime = { version = "0.2.1", features = ["crossterm-compat"] }
ftui-core = "0.2.1"
web-time = "1"
futures = { workspace = true }
